k8s-manifests/6-kube-state-metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: monitoring-system
  labels:
    app.kubernetes.io/name: kube-state-metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kube-state-metrics
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kube-state-metrics
    spec:
      serviceAccountName: kube-state-metrics
      containers:
        - name: kube-state-metrics
          image: registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.19.0
          imagePullPolicy: IfNotPresent
          args:
            - --resources=namespaces,nodes,persistentvolumeclaims,pods,resourcequotas,services,deployments,statefulsets,daemonsets,ingresses
          ports:
            - name: http-metrics
              containerPort: 8080
          resources:
            requests:
              cpu: "20m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: monitoring-system
  labels:
    app.kubernetes.io/name: kube-state-metrics
spec:
  ports:
    - name: http-metrics
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: kube-state-metrics
