k8s-manifests/7-grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring-system
  labels:
    app: grafana
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      nodeSelector:
        kubernetes.io/hostname: soleimani-ha2
      securityContext:
        fsGroup: 472
      containers:
        - name: grafana
          image: grafana/grafana:13.2.1
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana
          resources:
            requests:
              cpu: "150m"
              memory: "512Mi"
            limits:
              cpu: "800m"
              memory: "1536Mi"
          readinessProbe:
            httpGet:
              path: /grafana/api/health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /grafana/api/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 15
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-data
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring-system
spec:
  selector:
    app: grafana
  ports:
    - name: http
      port: 3000
      targetPort: 3000
